fixes alignment

--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -40,5 +40,6 @@
   border:     none;
   color:      #FFFFFF;
   display:    block;
+  text-align: center;
   width:      100%;
 }
